@startuml

class Prenotazione <<entity>> {
    - idPrenotazione: String
    - statoPrenotazione: Boolean
    - statoDisdetta: Boolean
    - ora: String
    - giorno: String

}
class Cliente <<entity>> {
    - idCliente: String
}
class Partita <<entity>> {
    - idPartita: String
    - tempoInizio: time 
    - tempoFine: time
    - esito: String
}

class Amministratore <<entity>> {
    - idAdmin: String
}

class Stanza <<entity>> {
    - idStanza: String
    - stato: Boolean
    - descrizione: String
    - prezzo: Double
    - nome: String
    - tipo: String
    - suggerimenti: List
}

abstract class Utente <<entity>> {
    - email: String
    - password: String
    - statoAccesso: Boolean
}


Cliente --|> Utente
Amministratore --|> Utente
Cliente "1..*"--|>"1" Stanza : prenota
Amministratore "1" --|> "0..*"   Stanza : gestisce
Cliente "1" --|> "0..*" Prenotazione : effettua
Prenotazione "0..*" -- "1" Stanza : riguarda
Cliente"1" --|>"1" Partita :esegue

@enduml